--- a/20230312.md
+++ b/20230312.md
@@ -4,6 +4,9 @@
 
 https://github.com/whatachad/guides/blob/main/common-study.md (참고자료)
 
+면접가면 프로젝트를 통해서 뭘 배웟고, 기술적으로 뭘 고민햇는지 물어보기에, 아래 링크처럼 저희도 document를 정리하면 좋겟습니다(내가 무슨 작업을 했는지는 머릿속에 있으니 굳히 공유 필요없을거 같습니다)
+https://github.com/connect-foundation/2019-02
+
 대략적인 일정 정하기
 
 - **지난주 한일**
