--- a/20230312.md
+++ b/20230312.md
@@ -27,6 +27,23 @@ https://github.com/connect-foundation/2019-02
   - Frontend
     - 디자인 및 CSS UI 색 조정
     - 공통 컴포넌트 작성
+ 
+Main page
+
+[ ] 검색창 및 추천 검색어 - 다짐 페이지 참고
+[ ] 운동 시설 카드
+[ ] 가계부 요약
+[ ] 투두 요약
+
+Power page - 다짐 참고
+[ ] 운동시설 CRUD
+
+Schedule page
+[ ] 가계부 달력 컴포넌트
+[ ] 항목 멀티탭 컴포넌트 - (가계부/투두)
+
+
+Redux => initial State setting (백앤드 API로 어떤 데이터가 필요한지 미리 정의)
 
 - **이슈보고**
   - ???
