--- a/20230312.md
+++ b/20230312.md
@@ -30,7 +30,7 @@ https://github.com/connect-foundation/2019-02
  
 Main page
 
-[ ] 검색창 및 추천 검색어 - 다짐 페이지 참고
+[ ] - 검색창 및 추천 검색어 - 다짐 페이지 참고
 
 [ ] 운동 시설 카드
 
