--- a/20230312.md
+++ b/20230312.md
@@ -27,7 +27,7 @@ https://github.com/whatachad/guides/blob/main/common-study.md (참고자료)
   - Backend
     - ???
   - Frontend
-    - 디자인 및 CSS UI 색 조정
+    - 디자인 확정 및 공통 CSS/컬러 확정
     - 공통 컴포넌트 작성
  
 Main page
