--- a/20230312.md
+++ b/20230312.md
@@ -54,8 +54,162 @@ Schedule page
 Redux => initial State setting (백앤드 API로 어떤 데이터가 필요한지 미리 정의)
 
 - **이슈보고**
-  - ???
+회의는 시간이 바뀌더라도, 날짜를 고정. 주 1회. 평일 화요일 고정적으로.
+
+기간 => 기간을 정해두지 않고 하면, 딜레이 되는 문제가 됨.
+(최대 1달) => 추가하고 싶은 기능이 있으면 추가하는 방식으로
+
+운동 설비 => 
+
+지역코드라는게 있는데, DB에서 seelect를 해서 뽑아낼수 있다. 그 해당 동 주변에, 코드를 뽑아서 필터링해서 데이터를 준다. 
+프론트 => 서버한테 좌표를 주면, 해당 지역코드내에서 운동시설 패칭 가능하도록. 
+
+당근마켓, 반경 1km이내로 검색이 가능하도록.
+
+
+
+
+
+
+[ 기술스택 사전 논의사항 ] 
+
+1. 프레임워크
+- next.js
+
+2. 규칙
+- eslint
+- prettier
+- typescript
+
+3. 통신
+- axios : http 통신
+
+4. 도구
+- 카카오 지도 api
+- dayjs : 날짜 라이브러리 (자기관리)
+- react-infinite-scroller : 무한 스크롤 (운동설비 카드)
+
+5. 디자인
+- styled-component / react-icons (현재 사용됨)
+- antd/emotion/toast (고려)
+
+6. 전역상태관리
+- redux
+
+7. 그 외 (안사용할것같습니다.)
+- react-hook-form : 폼 라이브러리 (로그인, 회원가입)
+- yup : 유효성 검사 (로그인, 회원가입)
+- react-daum-postcode : 주소 검색 (어드민 페이지가 있고, 운동설비 등록 시?)
+- uuid : 고유 id 생성
+
+
+[ 페이지 별 논의가 필요한 사항 ]
+
+1. 🏠홈 화면
+1-1. 네비게이션 바 : 🏠홈 / 🏋️‍♀️운동시설 / 📅자기관리 / ⚙️마이페이지 / (한글영문전환 셀렉터)
+1-2. 글로벌스타일
+- 서체 크기 (로고, 대제목, 소제목, 본문, 서브)
+- 컬러 (액티브, 서체, 보더, 백그라운드...)
+- 여백 (마진,패딩, 갭)
+
+2. 🏋️‍♀️운동설비 페이지
+2-1. 🏋️‍♀️리스트 화면
+- 검색바
+- 무한 스크롤
+- 내가 찜한 운동설비 목록
+
+2-2. 🗺️지도화면 (카카오 지도 api)
+- 내 위치 주변의 운동설비를 표시.
+- 내 위치 재설정 기능.
+- 운동설비의 타입 별 탭 (전체/헬스장/운동장 ...).
+- 내가 찜한 설비 목록만 보기.
+
+2-3. 운동설비 디테일
+- 서버에서 받아올 데이터 : id / 이미지 / 설명 / 위치(위도경도,한글주소("oo도 oo시 oo구 oo동")) / 설비타입(체육관, 운동장...)
+- 클라이언트에서 처리해야 할 데이터 : 내 위치로부터의 거리(km)
+- 유저별 서버에서 받아올 데이터 : 즐겨찾기(찜) 유무
+
+2-4. 운동설비 추가/수정 화면(어드민 페이지가 있을 시)
+
+3. 📅 자기관리 페이지 (로그인필요)
+3-1. 📅달력화면(월별)
+- 화면구성 : 달력, 투두리스트
+- 달력의 날짜에는 그 날 발생한 금액변화(예) -20,000원), 투두리스트가 기재됨
+- 예산보다 더 큰 지출이 발생한 날은 빨간색 스타일로 표기.
+- 날짜 클릭 시, 일별 디테일 화면으로 이동.
+
+3-2. 📜월별 리스트 화면
+- 수입지출이체 리스트, 투두리스트
+- 예산보다 더 큰 지출이 발생한 일은
+- 항목 추가, 제거 버튼.
+
+3-3. 일별 디테일화면
+- 오늘로 이동 버튼.
+- 항목 추가, 제거버튼.
+
+3-3. 항목 작성/수정 화면 (자기관리 앱으로서, 어디까지 구현해야할지 논의 필요)
+3-3-1. 가계부 데이터
+- 카테고리: ["식비", "교통", ...] 셀렉터
+- 타입 : ["수입","지출","이체"] 셀렉터
+- 날짜선택 : 날짜타입
+- 내용 : string
+- 금액 : number
+
+3-3-2. 투두리스트 데이터
+- 제목 : string
+- 내용 : string
+- 상태 : boolean
+- 컬러 : string
+- 날짜선택 : 날짜타입
+
+4. ⚙️마이페이지 -> 메인 완성 이후에 하는걸로
+4-1 유저편의 (게시판을 만드는것은 조금 일이 커지는 것 같아서 아래와 같이 생각해보았습니다.)
+- 시설등록요청 (폼 제출->관리자 이메일로 받기)
+- 문의 (폼 제출->관리자 이메일로 받기)
+- FAQ (하드코딩)
+
+4-2 개인설정  (로그인필요)
+- 닉네임 변경
+- 위치 재설정
+- 운동설비 찜목록
+- 예산 설정
+- 투두리스트 반복설정(매일 추가되는 하루 루틴)
+
+4-3 약관
+- 서비스이용약관
+- 개인정보처리방침
+- 위치기반 서비스 약관
+
+5. 유저 관련
+5-1. 회원가입 화면
+- 이메일로 가입 : 이메일 / 비밀번호 / 닉네임
+
+5-2. 로그인 화면
+- 이메일로 로그인
+- 소셜 로그인
+
+[ 기타 프론트엔드  논의사항 ]
+- Open Graph : 제목, 설명, 이미지
+- 서체 : https://spoqa.github.io/spoqa-han-sans/#webfont (추천)
+- 네이밍 규칙 (폴더,파일)
+- 깃허브 브랜치 분기 규칙
+
+[ 궁금한 점 ]
+- 유저관리, 운동설비를 추가할 수 있는 어드민 페이지 구현 여부
+- 현재까지 만들어진 현황 묻기
+- 예상하는 제작 기간
+- 각자 맡은 역할 및 기여도
+- 우리 프로젝트 과정을 어떻게 포장할지
+- 가계부 혼내주기 이메일에 대한 기획 변경 : 예산을 정하고, 예산을 넘는 지출을 일주일/1달 단위로 
+- http 통신 docs는 정리해서 주시는지 (swagger?) -> 백앤드가 배포가 X, 편하게 쓸수 없는 환경이라서, 늦어 질수 있음. 리덕스 initialState -> api로 갈아 끼우는식으로 개발 
+
+[ 이번 기회에 학습하고 싶은점 ]
+- 로그인 과정 이해
+- 리덕스 사용
+- 배포 과정 이해
+- 깃허브 이슈 및 프로젝트 관리 경험
+- 깃 플로우를 통한 브랜치 분기 사용 경험
+- 스토리북을 통한 컴포넌트 관리
+- ...
 
 ### **다음 회의 안건**
-
-- ???
